# big-int-lib

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
big-int-lib/: bigint.c  bigint.h  diff.c  div.c  mod.c  mul.c  sub.c  sum.c  utils.c  utils.h
include/: bigint.c  bigint.h
tests/: factorial.py  main.c  tests.c
